--- a/wordpress/wp-content/themes/twentytwenty/style.css
+++ b/wordpress/wp-content/themes/twentytwenty/style.css
@@ -120,6 +120,10 @@ blockquote::after {
   font-size: 0.9rem;
 }
 
+/* ghi de container-fluid */
+.container-fluid {
+	max-width: 90% !important;
+}
 
 
 /* footer custom */
@@ -250,11 +254,11 @@ section .section-title {
   text-transform: uppercase;
 }
 .post-date .day {
-  font-size: 2rem;
+  font-size: 2.3rem;
   line-height: 1;
 }
 .post-date .month-year {
-  font-size: 0.8rem;
+  font-size: 1.8rem;
   opacity: 0.8;
 }
 
@@ -555,9 +559,7 @@ section .section-title {
 .title-notfound{
 	font-size: 2rem;
 }
-.search-page {
-  font-family: "Segoe UI", sans-serif;
-}
+
 
 .not-found h4 {
   color: #333;
