--- a/wordpress/wp-content/themes/header-custom/assets/style.css
+++ b/wordpress/wp-content/themes/header-custom/assets/style.css
@@ -11,8 +11,20 @@
     padding-left: 0 !important;
     max-width: 900px;
     margin: 0 auto !important; 
+    
 }
 
+.comment-font-size {
+    font-size: 2.2rem !important;  
+}
+
+.comment-font-size p {
+    font-size: 2rem !important;
+}
+
+.comment-font-size span {
+    font-size: 2rem !important;
+}
 
 #comments .comment-list li {
     border: none !important;
