--- a/wordpress/wp-content/themes/twentytwenty/assets/css/single-style.css
+++ b/wordpress/wp-content/themes/twentytwenty/assets/css/single-style.css
@@ -28,6 +28,8 @@ body.single {
   color: #1d1d1f;
   margin-bottom: 1.5rem;
   line-height: 1.3;
+  /* margin-right: 50px; */
+
 }
 
 .single-date {
@@ -62,6 +64,8 @@ body.single {
   margin-bottom: 1.2rem;
   color: #444;
 }
+
+
 
 /* ====== SIDEBAR – CATEGORIES ====== */
 .sidebar-widget.categories-box {
@@ -213,6 +217,7 @@ body.single {
 .btn-view-all-news:hover {
   text-decoration: underline;
 }
+
 
 /* ====== PRE / NEXT POSTS ====== */
 .wrapper-prepost {
